
2017-12-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* intrinsic.c (cob_mod_or_rem): fix bug #485 don't raise
	  EC-SIZE-ZERO-DIVIDE but EC-ARGUMENT-FUNCTION

2017-12-26  Ron Norman <rjn@inglenet.com>

	* numeric.c: Fix bug #122 COMP-1 / FLOAT-SHORT + COMP-2 / FLOAT-LONG
	  to check of overflow and set SIZE ERROR condition when requested

2017-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_trace_file): FR #242 allow trace file to be
	  appended by starting COB_TRACE_FILE with "+"
	* common.c: changes to new tracing: distinguish between function and
	  program, trailing output is not fixed-width, only use specified spacing
	* common.c (cob_trace_prep, ): distinguish between function and program
	* common.c (set_config_val): FR #242 allow COB_TRACE_FILE
	  (and COB_CURRENT_DATE) to be changed at runtime (currently untested!)

2017-12-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_get_field): fix bug #223 don't raise
	  EC-SIZE-OVERFLOW when EC-SIZE-ZERO-DIVIDE is active

2017-12-22  Ron Norman <rjn@inglenet.com>

	* numeric.c: fixes for FLOAT-DECIMAL-16/34 data types to raise
	  SIZE ERROR condition when out of bounds

2017-12-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, termio.c, coblocal.h: renamed setting COBPRINTER to
	  COB_DISPLAY_PRINT_PIPE (with keeping an alias of COBPRINTER) and
	  COB_DISPLAY_PRINTER to COB_DISPLAY_PRINT_FILE
	* common.c (cob_set_runtime_option, cob_get_runtime_option), common.h:
	  use enum cob_runtime_option_switch instead of anonymous int with
	  possible values as defines

2017-12-21  Ron Norman <rjn@inglenet.com>

	* common.h: add code_is_present flag to cob_report structure
	* reportio.c: output CODE value as fixed length field
	              (do not trim trailing spaces)

2017-12-20  Ron Norman <rjn@inglenet.com>

	* common.h: add code_is, code_len to cob_report structure